<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:id="@+id/dialog_linkedin_layout"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="LinkedIn Post"
        android:id="@+id/tvLinkedInHeaderText"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
...
        android:gravity="center_vertical"
        android:paddingLeft="15dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivLinkedInHeaderImg"
        android:src="@drawable/linkedin_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvLinkedInHeaderText"
        android:layout_marginTop="10dp"
...
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />

    <com.ambassador.ambassadorsdk.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLinkedInMessage"
        android:backgroundTint="@color/twitter_blue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        android:editable="true"
        android:layout_below="@+id/tvSend"
...
    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="Cancel"
        android:textColor="@color/ambassador_blue"
        android:id="@+id/btnCancel"
        android:layout_alignTop="@+id/btnPost"
        android:layout_toStartOf="@+id/btnPost"
        android:layout_toLeftOf="@+id/btnPost"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
...
        android:textColor="@color/ambassador_blue"
        android:layout_marginBottom="8dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingPanel"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:backgroundTint="@color/linkedin_blue" />

</RelativeLayout>
