...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Spread the word"
        android:id="@+id/tvWelcomeTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Refer a friend to get a reward"
        android:id="@+id/tvWelcomeDesc"
        android:layout_below="@+id/tvWelcomeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etShortURL"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/tvWelcomeDesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="www.mbsy.co/lsdjfasfd" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gvSocialGrid"
        android:layout_below="@+id/etShortURL"
        android:layout_alignParentBottom="true"
        android:stackFromBottom="false"
        android:transitionGroup="false"
        android:columnWidth="80dp"
        android:numColumns="auto_fit"
...
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/btnCopyPaste"
        android:layout_alignTop="@+id/etShortURL"
        android:layout_alignRight="@+id/etShortURL"
        android:src="@mipmap/copy_paste_icon"
        android:background="#00ffffff"
        android:scaleType="fitXY" />
</RelativeLayout>
...
