...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvNumberOrEmail"
        android:layout_marginLeft="0dp"
        android:textSize="15dp"
        android:layout_below="@+id/tvName"
        android:layout_alignStart="@+id/tvName"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/ivCheckMark"
        android:src="@mipmap/checkmark"
        android:layout_marginRight="-25dp"
        android:layout_alignTop="@+id/tvName"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
